# smartenergy.goecharger-api

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pylintrc  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-ci.yml  python-publish.yml
examples/: simple.py
src/: __init__.py
src/goecharger/: goecharger.py  validations.py
src/goechargerv2/: __init__.py  goecharger.py  validations.py
tests/: goecharger.py  test_goecharger.py  test_validations.py  validations.py
