[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
authors = [
  {name = "Ingmar Mueller", email = "ingmar.mueller@kfw.de"},
  {name = "Mario Macai", email = "mario.macai@accenture.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["requests >= 2.27.1"]
description = "API library for the go-eCharger."
keywords = ["goecharger", "kfw", "api", "cloud"]
name = "goechargerv2"
readme = "README.md"
requires-python = ">=3.7"
version = "0.2.0"

[project.optional-dependencies]
dev = ["black", "pylint", "python-dotenv"]

[project.urls]
"Bug Tracker" = "https://github.com/openkfw/goechargerv2/issues"
"Homepage" = "https://github.com/openkfw/goechargerv2"
